# NetGen

./: BGP_ROUTE_ADVERTISEMENT_FEATURE.md  BUILD_DIRECTORIES.md  CODEBASE_ANALYSIS.md  DEPLOYMENT.md  Dockerfile.frr  FRR_CONFIGURATION_FLOW.md  FRR_TEMPLATE_USAGE.md  INSTALLATION.md  INVESTIGATION_SUMMARY.md  MANIFEST.in  MODULARIZATION_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_LEARNING.md  README.md  UI_RESPONSIVENESS_FIX.md  add_bgp_route_dialog_updated.py  add_device_test.py  add_interface_check.py  apply_device_config.py  build_dmg.sh  build_macos_installer.sh  capture_client.py  check_bgp_timers.py  check_db.py  check_dhcp_status.sh  check_docker_logs.sh  check_frr_config.sh  check_ospf_logs.py  check_prerequisites.sh  check_server_logs.py  cleanup_containers.exp  cleanup_containers.sh  cleanup_device_database.py  cleanup_ostg.sh  configure_device_protocols.py  deploy.sh  deploy_config.conf  deploy_config_example.conf  deploy_quick.sh  deploy_script.py  (+58 more)
build_image/: ostg_trafficgen-0.1.52-py3-none-any.whl
ostg/: cli.py  server.py
ostg_docker/: Dockerfile.frr  frr.conf.template  install_docker.sh  start-frr.sh
ostg_trafficgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
systemd/: ostg-server.service
traffic_client/: main.py  menu_actions.py  packet_capture.py  server_retry_workers.py  server_section.py  statistics_section.py  stream_control.py  stream_logic.py
utils/: arp.py  arp_monitor.py  bgp.py  bgp_monitor.py  device_database.py  device_manager.py  devices_tab_bgp.py  devices_tab_dhcp.py  devices_tab_isis.py  devices_tab_ospf.py  devices_tab_vxlan.py  dhcp.py  dhcp.py.backup.20251112_212731  dhcp_monitor.py  (+20 more)
(+18 files in other folders)
